Rol Tecnico on Inventario

--- a/views/sustancias/inventario_manage.html
+++ b/views/sustancias/inventario_manage.html
@@ -1,6 +1,6 @@
 {{extend 'layout.html'}}
 
-<h2>Listado de Sustancias Peligrosas</h2>
+<h2>Inventario</h2>
 
 <p>{{=table}}</p>
 <a  href="{{=URL('front_page','sustancias')}}">
