--- a/views/sustancias/view_bitacora.html
+++ b/views/sustancias/view_bitacora.html
@@ -3,6 +3,7 @@
 <h1>Bitacora</h1>
 <h2>Sustancia: {{=name}}</h2>
 <p>{{=table}}</p>
+<p>Cantidad Disponible: {{=total}}</p>
 <a  href="{{=URL('sustancias','inventario_manage')}}">
 <button class="btn btn-default">Atras</button>
 </a>
