--- a/views/sustancias/view_bitacora.html
+++ b/views/sustancias/view_bitacora.html
@@ -1,6 +1,7 @@
 {{extend 'layout.html'}}
 
 <h1>Bitacora</h1>
+<p>A:{{=espF}}</p>
 <h2>Sustancia: {{=name}}</h2>
 <p>{{=table}}</p>
 <p>Cantidad Disponible: {{=total}}</p>
