--- a/views/sustancias/inventario_manage.html
+++ b/views/sustancias/inventario_manage.html
@@ -1,8 +1,7 @@
 {{extend 'layout.html'}}
 
 <h2>Inventario</h2>
-
 <p>{{=table}}</p>
-<a  href="{{=URL('front_page','sustancias')}}">
+<a  href="{{=URL('sustancias','select_inventario')}}">
 <button class="btn btn-default">Atras</button>
 </a>
