--- a/views/sustancias/select_inventario.html
+++ b/views/sustancias/select_inventario.html
@@ -1,10 +1,28 @@
 {{extend 'layout.html'}}
 
-<h2>Inventario</h2>
+<h2>Seleccionar Inventario</h2>
+<p>{{=espacios}}</p>
 {{for espacio in espacios:}}
-<a = href="{{=URL('sustancias','inventario_manage',vars=dict(esp=espacio.id))}}"
-<p>{{=espacio.f_espacio}}</p>
+<a = href="{{#=URL('sustancias','inventario_manage',vars=dict(esp=espacio.id))}}"
+<p>{{#=espacio.f_espacio}}</p>
 {{pass}}
+
+{{if secciones:}}
+{{  for seccion in secciones:}}
+<a = href="{{#=URL('sustancias','inventario_manage',vars=dict(secc=seccion.id))}}"
+<p>Seccion: {{#=seccion.f_seccion}}</p>
+</a>
+{{  pass}}
+{{pass}}
+
+{{if lab:}}
+{{  for seccion in secciones:}}
+<a = href="{{=URL('sustancias','inventario_manage',vars=dict(secc=seccion.id))}}"
+<p>Seccion: {{=seccion.f_seccion}}</p>
+</a>
+{{  pass}}
+{{pass}}
+
 <a  href="{{=URL('front_page','sustancias')}}">
 <button class="btn btn-default">Atras</button>
 </a>
