Añadido gestion de membresia.

--- a/views/gestion/usuarios.html
+++ b/views/gestion/usuarios.html
@@ -1,3 +1,5 @@
 {{extend 'layout.html'}}
 
-<h2>Gestión de Usuarios Registrados</h2><p>{{=form}}</p>
+<h2>Gestión de Usuarios Registrados</h2>
+<p>Desde aquí se pueden consultar, editar y eliminar los usuarios que tienen acceso al sistema.</p>
+<p>{{=form}}</p>
