--- a/views/gestion/privilegios.html
+++ b/views/gestion/privilegios.html
@@ -1,3 +1,5 @@
 {{extend 'layout.html'}}
 
-<h2>Gestión de Privilegios</h2><p>{{=form}}</p>
+<h2>Gestión de Privilegios</h2>
+<p>Desde aquí se pueden consultar los privilegios disponibles en el sistema y quienes están asociados.</p>
+<p>{{=form}}</p>
