--- a/views/front_page/index.html
+++ b/views/front_page/index.html
@@ -1,3 +1,4 @@
 {{extend 'layout.html'}}
 <li><a href="{{=URL('front_page','sustancias')}}">Gestion de Sustancias</a></li>
 <li><a href="{{=URL('front_page','desechos')}}">Gestion de Desechos</a></li>
+<li><a href="{{=URL('gestion','index')}}">Gestion de Personal</a></li>
