--- a/views/front_page/index.html
+++ b/views/front_page/index.html
@@ -1,4 +1,14 @@
 {{extend 'layout.html'}}
+
+{{if auth.has_membership('Director') \
+  or auth.has_membership('Administrador Personal') \
+  or auth.has_membership('WebMaster')\
+  or auth.has_membership('Jefe de Laboratorio') \
+  or auth.has_membership('Jefe de Sección') \
+  or auth.has_membership('Técnico')\
+  or auth.has_membership('Gestor de Sustancias'):}}
 <li><a href="{{=URL('front_page','sustancias')}}">Gestion de Sustancias</a></li>
 <li><a href="{{=URL('front_page','desechos')}}">Gestion de Desechos</a></li>
 <li><a href="{{=URL('gestion','index')}}">Gestion de Personal</a></li>
+{{else:}}
+{{pass}}
