--- a/views/sustancias/inventario_lab.html
+++ b/views/sustancias/inventario_lab.html
@@ -1,6 +1,7 @@
 {{extend 'layout.html'}}
 
 <h2>Inventario</h2>
+<h2>{{=lab}}</h2>
 <p>{{=table}}</p>
 <a  href="{{=URL('sustancias','select_inventario')}}">
 <button class="btn btn-default">Atras</button>
