--- a/views/sustancias/inventario_manage.html
+++ b/views/sustancias/inventario_manage.html
@@ -13,6 +13,10 @@
 <h2>Sustancia: {{=sustancia}}</h2>
 {{pass}}
 
+{{if espFisico:}}
+<h2>Espacio Fisico: {{=espFisico}}</h2>
+{{pass}}
+
 <p>{{=table}}</p>
 <a  href="{{=URL('sustancias','select_inventario')}}">
 <button class="btn btn-default">Atras</button>
