--- a/views/front_page/index.html
+++ b/views/front_page/index.html
@@ -1,4 +1,42 @@
 {{extend 'layout.html'}}
-<li><a href="{{=URL('front_page','sustancias')}}">Gestion de Sustancias</a></li>
-<li><a href="{{=URL('front_page','desechos')}}">Gestion de Desechos</a></li>
-<li><a href="{{=URL('gestion','index')}}">Gestion de Personal</a></li>
+<div class="container">
+	<ol class="breadcrumb" style="background-color:#E0F2F1">
+	  <li class="breadcrumb-item active">Home</li>
+	</ol>
+  <h2 style="color:#455A64">Gestión</h2>
+  <br>
+  <div class="row">
+    <div class="col-sm-4 text-center">
+		<div class="breadcrumb"  style="background-color:#E0F2F1">
+			<a href="{{=URL('front_page','sustancias')}}">
+			<img class="img-thumbnail img-fluid sigulab-img" src="/SIGULAB/static/images/chemical.png" alt="Sustancias" style="width:228px;height:228px;background-color:transparent"/>
+			</a>
+			<div class="card-block">
+				<h4 class="card-title"><a style="color:#607D8B" href="{{=URL('front_page','sustancias')}}">Sustancias</a></h4>
+
+			</div>
+		</div>
+	</div>
+
+    <div class="col-sm-4 text-center">
+    	<div class="breadcrumb" style="background-color:#E0F2F1">
+	    	<a href="{{=URL('front_page','desechos')}}">
+	  		<img class="img-thumbnail img-fluid" src="/SIGULAB/static/images/desechos.png" alt="Sustancias" style="width:228px;height:228px;background-color:transparent"/>
+			</a>
+			<div class="card-block">
+			<h4><a style="color:#607D8B" href="{{=URL('front_page','desechos')}}">Desechos</a></h4>
+			</div>
+		</div>
+    </div>
+    <div class="col-sm-4 text-center">
+	    <div class="breadcrumb" style="background-color:#E0F2F1">
+			<a href="{{=URL('gestion','index')}}" >
+			  <img class="img-thumbnail img-fluid" src="/SIGULAB/static/images/personal.png" alt="Sustancias" style="width:228px;height:228px;background-color:transparent"/>
+			</a>
+			<div class="card-block">
+			<h4><a style="color:#607D8B" href="{{=URL('gestion','index')}}">Personal</a></h4>
+			</div>
+	    </div>
+  </div>
+</div>
+
