--- a/views/sustancias/inventario_seccion.html
+++ b/views/sustancias/inventario_seccion.html
@@ -1,17 +1,22 @@
 {{extend 'layout.html'}}
+<div class="container">
+	<ol class="breadcrumb" style="background-color:#E0F2F1">
+	  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
+	  <li class="breadcrumb-item"><a href="{{=URL('front_page','sustancias')}}">Sustancias</a></li>
+	  <li class="breadcrumb-item"><a href="{{=URL('sustancias','select_inventario')}}">Inventario</a></li>
+	  <li class="breadcrumb-item active">Sección</li>
+	</ol>
 
-<h2>Inventario</h2>
-<h2>{{=lab}}</h2>
+<h3 style="color:#455A64">{{=lab}}</h3>
 
 {{if seccion:}}
-<h2>Seccion: {{=seccion}}</h2>
+<h3 style="color:#455A64">Seccion: {{=seccion}}</h3>
 {{pass}}
 
 {{if sustancia:}}
-<h2>Sustancia: {{=sustancia}}</h2>
+<h3 style="color:#455A64">Sustancia: {{=sustancia}}</h3>
 {{pass}}
 
 <p>{{=table}}</p>
-<a  href="{{=URL('sustancias','select_inventario')}}">
-<button class="btn btn-default">Atras</button>
-</a>
+
+</div>
