--- a/views/sustancias/select_inventario.html
+++ b/views/sustancias/select_inventario.html
@@ -1,35 +1,81 @@
 {{extend 'layout.html'}}
 
-<h2>Seleccionar Inventario</h2>
-{{if espacios:}}
-<h3>Espacios Fisicos:</h3>
-{{for espacio in espacios:}}
-<a = href="{{=URL('sustancias','inventario_manage',vars=dict(esp=espacio.id))}}"
-<p>Seccion: {{=espacio.f_seccion}}, {{=espacio.f_espacio}}</p>
-{{pass}}
-</a>
+<div class="container">
+	<ol class="breadcrumb" style="background-color:#E0F2F1">
+	  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
+	  <li class="breadcrumb-item"><a href="{{=URL('front_page','sustancias')}}">Sustancias</a></li>
+	  <li class="breadcrumb-item active">Inventario</li>
+	</ol>
 
-{{if secciones:}}
-<h3>Secciones:</h3>
-{{  for seccion in secciones:}}
-<a = href="{{=URL('sustancias','inventario_seccion',vars=dict(secc=seccion.id))}}"
-<p>{{=seccion.f_laboratorio}}, {{=seccion.f_seccion}}</p>
-</a>
-{{  pass}}
-{{pass}}
+  <br>
+  <div class="row">
+    <div class="col-sm-4 text-center">
+		<div class="breadcrumb" style="background-color:#E0F2F1">
+			<img  class="img-thumbnail img-fluid" src="/SIGULAB/static/images/laboratorio.png"  style="width:228px;height:228px;background-color:transparent;"/>
+			<div class="card-block">
+			<h4 style="color:#607D8B">Laboratorios:</h4>
+			</div>
+		</div>
+		{{if labs:}}
 
-{{if labs:}}
-<h3>Laboratorios:</h3>
-{{  for lab in labs:}}
-<a = href="{{=URL('sustancias','inventario_lab',vars=dict(lab=lab.id))}}"
-<p>{{=lab.f_nombre}}</p>
-</a>
-{{  pass}}
-{{pass}}
+		{{  for lab in labs:}}
+		<div class="breadcrumb"  style="background-color:#E0F2F1">
+			<a = href="{{=URL('sustancias','inventario_lab',vars=dict(lab=lab.id))}}">
+			<h5>{{=lab.f_nombre}}</h5></a>
+			</a>
+		</div>
+		{{  pass}}
+
+		</div>
+
+    <div class="col-sm-4 text-center">
+		<div class="breadcrumb" style="background-color:#E0F2F1">
+			<img  class="img-thumbnail img-fluid" src="/SIGULAB/static/images/seccion.ico" style="width:228px;height:228px;background-color:transparent;"/>
+			<div class="card-block">			
+			<h4 style="color:#607D8B">Secciones:</h4>
+			</div>
+		</div>
+		{{if secciones:}}
+		{{  for seccion in secciones:}}
+		<div class="breadcrumb"  style="background-color:#E0F2F1">
+			<a  href="{{=URL('sustancias','inventario_seccion',vars=dict(secc=seccion.id))}}">
+			<h5>{{=seccion.f_laboratorio}}, {{=seccion.f_seccion}}</h5></a>
+		</div>
+		{{  pass}}
+		<br>
+		{{pass}}
+    </div>
+    <div class="col-sm-4 text-center">
+		<div class="breadcrumb" style="background-color:#E0F2F1">
+			<img class="img-thumbnail img-fluid" src="/SIGULAB/static/images/espacio.png"  style="width:228px;height:228px;background-color:transparent;"/>
+			<div class="card-block">			
+			<h4 style="color:#607D8B">Esp. Fisicos:</h4>
+			</div>
+		</div>
+		{{if espacios:}}
+		
+		{{for espacio in espacios:}}
+		<div class="breadcrumb"  style="background-color:#E0F2F1">
+			<a href="{{=URL('sustancias','inventario_manage',vars=dict(esp=espacio.id))}}">
+			<h5>Seccion: {{=espacio.f_seccion}}, {{=espacio.f_espacio}}</h5></a>
+		</div>
+		{{pass}}
+		
+
+		{{pass}}
+  </div>
+
 
 {{else:}}
-<h3>No hay nada aqui :(</h3>
+
 {{pass}}
-<a  href="{{=URL('front_page','sustancias')}}">
-<button class="btn btn-default">Atras</button>
-</a>
+<br>
+<br>
+</div>
+
+
+
+
+
+
+
