--- a/views/layout.html
+++ b/views/layout.html
@@ -104,11 +104,8 @@
     {{block footer}} <!-- this is default footer -->      
     <footer class="footer">
       <div class="container-fluid">
-        <div class="copyright pull-left">{{=T('Copyright')}} &#169; {{=request.now.year}}</div>
-          <div id="poweredBy" class="pull-right">
-            {{=T('Powered by')}}
-            <a href="http://www.web2py.com/">web2py</a>
-          </div>
+        <div class="copyright pull-left">{{=T('LAMBDA DEV')}} &#169; {{=request.now.year}}
+        </div>
       </div>
     </footer>
     {{end}}
@@ -125,7 +122,5 @@
       });
     </script>
     {{pass}}
-    <!-- Share ============================y============ -->
-    <script src="{{=URL('static','js/share.js',vars=dict(static=URL('static','images')))}}"></script>
   </body>
 </html>
