--- a/views/front_page/sustancias.html
+++ b/views/front_page/sustancias.html
@@ -31,7 +31,7 @@
 	  		<img class="img-thumbnail img-fluid" src="/SIGULAB/static/images/inventory.png" alt="Sustancias" style="width:228px;height:228px;background-color:transparent"/>
 			</a>
 			<div class="card-block">
-			<h4><a style="color:#607D8B" href="{{=URL('front_page','desechos')}}">Inventario</a></h4>
+			<h4><a style="color:#607D8B" href="{{=URL('sustancias','select_inventario')}}">Inventario</a></h4>
 			</div>
 		</div>
     </div>
