--- a/views/layout.html
+++ b/views/layout.html
@@ -49,14 +49,14 @@
     body{
     background-image:url("{{=URL('static','images/logo-usb.png')}}"));
     }
-</style>
+  </style>
   </head>
   <body >
   <section id="main" class="main row" style="background-image:'/SIGULAB/static/images/logo-usb.png'">
     <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
     <div class="w2p_flash alert alert-dismissable">{{=response.flash or ''}}</div>
     <!-- Navbar ======================================= -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" id="header" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
