--- a/views/sustancias/select_facturas.html
+++ b/views/sustancias/select_facturas.html
@@ -1,6 +1,6 @@
 {{extend 'layout.html'}}
 <br><br>
 {{=table}}
-<a  href="{{=URL('view_compras', args=['t_facturas', 'new', 't_facturas'],user_signature=True)}}">
+<a  href="{{=URL('new_facturas',vars=dict(esp=request.vars['esp'],sust=request.vars['sust']))}}">
 <button class='btn btn-default center-block'>Agregar Una Nueva Factura</button>
 </a>
