Añadido login de Jhon

--- a/views/front_page/sustancias.html
+++ b/views/front_page/sustancias.html
@@ -1,6 +1,5 @@
 {{extend 'layout.html'}}
 {{if auth.has_membership('Director') \
-  or auth.has_membership('Administrador Personal') \
   or auth.has_membership('WebMaster')\
   or auth.has_membership('Jefe de Laboratorio') \
   or auth.has_membership('Jefe de Sección') \
@@ -38,4 +37,5 @@
     </div>
 </div>
 {{else:}}
+{{redirect(URL('front_page','index'))}}
 {{pass}}
