--- a/views/front_page/index.html
+++ b/views/front_page/index.html
@@ -1,20 +1,19 @@
 {{extend 'layout.html'}}
-
-{{if auth.has_membership('Director') \
-  or auth.has_membership('Administrador Personal') \
-  or auth.has_membership('WebMaster')\
-  or auth.has_membership('Jefe de Laboratorio') \
-  or auth.has_membership('Jefe de Sección') \
-  or auth.has_membership('Técnico')\
-  or auth.has_membership('Gestor de Sustancias'):}}
 <div class="container">
     <ol class="breadcrumb" style="background-color:#E0F2F1">
       <li class="breadcrumb-item active">Home</li>
     </ol>
-    <h1 align="center" style="color:#455A64">GESTIÓN</h1>
+    <h1 align="center" style="color:#455A64">SIGULAB</h1>
     <br>
     <div class="row">
-        <div class="col-md-4 text-center">
+
+        {{if auth.has_membership('Director') \
+          or auth.has_membership('WebMaster')\
+          or auth.has_membership('Jefe de Laboratorio') \
+          or auth.has_membership('Jefe de Sección') \
+          or auth.has_membership('Técnico')\
+          or auth.has_membership('Gestor de Sustancias'):}}
+        <div class="panel col-md-6 text-center">
 	        <a href="{{=URL('front_page','sustancias')}}" class="btn btn-lg btn-block" role="button">
 		        <h4>
 		            <i class="fa fa-flask fa-3x" aria-hidden="true"></i>
@@ -25,7 +24,7 @@
 	        </a>
         </div>
 
-        <div class="col-md-4 text-center">
+        <div class="panel col-md-6 text-center">
             <a href="{{=URL('front_page','desechos')}}" class="btn btn-lg btn-block" role="button">
 		        <h4>
 		            <i class="fa fa-trash-o fa-3x" aria-hidden="true"></i>
@@ -35,8 +34,12 @@
 		        </h4>
 	        </a>
         </div>
+        {{pass}}
 
-        <div class="col-md-4 text-center">
+        {{if auth.has_membership('Administrador Personal') \
+            or auth.has_membership('WebMaster')\
+            or auth.has_membership('Director'): }}
+        <div class="panel col-md-6 text-center">
             <a href="{{=URL('gestion','index')}}" class="btn btn-lg btn-block" role="button">
 		        <h4>
 		            <i class="fa fa-user-o fa-3x" aria-hidden="true"></i>
@@ -46,7 +49,17 @@
 		        </h4>
 	        </a>
         </div>
+
+        <div class="panel col-md-6 text-center">
+            <a href="{{=URL('gestion','index_e')}}" class="btn btn-lg btn-block" role="button">
+            <h4>
+                <i class="fa fa-building-o fa-3x" aria-hidden="true"></i>
+            </h4>
+            <h4>
+                Espacios
+            </h4>
+          </a>
+        </div>
+        {{pass}}
     </div>
 </div>
-{{else:}}
-{{pass}}
