--- a/views/default/reset.html
+++ b/views/default/reset.html
@@ -26,7 +26,7 @@
 		  
 		  <tr>
 			<td class="box3">
-				<a href="{{=URL('default','login')}}">Ingresar</a>
+				<a href="{{=URL('default','login')}}"><< Atrás</a>
 			</td>
 			<td class="box3 box35">
 			<a href="{{=URL('default','register')}}">Registrarse</a>
