--- a/views/sustancias/inventario_manage.html
+++ b/views/sustancias/inventario_manage.html
@@ -33,6 +33,9 @@
 {{else:}}
 
 <p>{{=table}}</p>
+{{if 'new' in request.args:}}
+<p class="help-block center">Los campos marcados con (*) son obligatorios</p>
+{{pass}}
 
 {{pass}}
 
