--- a/views/layout.html
+++ b/views/layout.html
@@ -64,7 +64,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">SIGULAB</a>
+          <a class="navbar-brand" href="{{=URL('front_page','index')}}">SIGULAB</a>
           {{=response.logo or ''}}
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -108,15 +108,24 @@
       {{pass}}
 
     </div>
+    <br>
     {{block footer}} <!-- this is default footer -->
-    <footer class="footer" style="background-color:white;color:black">
+    <!--<footer class="footer" style="background-color:white;color:black">
       <div class="container-fluid">
         <div class="copyright pull-left">{{=T('SIGULAB')}} &#169; {{=request.now.year}}</div>
           <div class="pull-right">
               <img src="{{=URL('static','images/usb.png')}}" class="img-responsive" height="30" width="30" alt="USB" align="left">
               &nbsp;&nbsp;Universidad Simón Bolívar
           </div>
-      </div>
+      </div>-->
+<table align="center" class="footer2" border="0" cellpadding="1" cellspacing="1"><tbody><tr><td valign="bottom" width="95">
+        <a href="http://www.usb.ve"><img width="70" height="45"alt="" src="{{=URL('static','images/usb.png')}}"></a></td>
+<td valign="bottom">
+        <a href="http://www.usb.ve/home/node/68">e-virtual</a> | <a href="https://webmail.usb.ve/" target="_blank">Correo</a> |<a href="http://www.usb.ve/buscador.php" target="_blank"> </a><a href="https://esopo.usb.ve">esopo</a> |<a href="http://www.usb.ve/buscador.php" target="_blank"> </a><a href="http://www.youtube.com/canalusb" target="_blank">canalUSB</a> | <a href="http://www.usb.ve/agenda.php" target="_blank">Agenda Cultural</a> | <a href="http://usbnoticias.info/" target="_blank">USBnoticias</a> |<span> </span><span> </span><a href="http://www.usb.ve/home/node/55">Calendario</a> |<br>
+        Sede Sartenejas, Baruta, Edo. Miranda - Apartado 89000 - Cable Unibolivar - Caracas Venezuela. Teléfono +58 0212-9063111<br>
+        Sede Litoral, Camurí Grande, Edo. Vargas Parroquia Naiguatá. Teléfono +58 0212-9069000<br>
+        Diseñada y desarrollada por Lambda (Sistemas de Información I) <a href="mailto:ulab-smdp@usb.ve">ulab-smdp@usb.ve</a></td>
+</tr></tbody></table>
     </footer>
     {{end}}
     <!-- The javascript =============================== -->
