--- a/views/solicitud/select_solicitud.html
+++ b/views/solicitud/select_solicitud.html
@@ -3,46 +3,31 @@
 <div class="container">
 	<ol class="breadcrumb" style="background-color:#E0F2F1">
 	  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
-	  <li class="breadcrumb-item"><a href="{{=URL('front_page','sustancias')}}">Sustancias</a></li>
-	  <li class="breadcrumb-item active">Inventario</li>
+	  <li class="breadcrumb-item active">Solicitud</li>
 	</ol>
 
-<p>{{str(auth.has_membership('Técnico'))}}</p>
+<h1 align="center" style="color:#455A64">MIS SOLICITUDES</h1>
 
+<p>{{str(auth.has_membership('Técnico'))}}</p>
 {{if espacios:}}
   <br>
   <div class="row">
     <div class="col-sm-4 text-center">
 		<div class="breadcrumb" style="background-color:#E0F2F1">
-			<img  class="img-thumbnail img-fluid" src="/SIGULAB/static/images/laboratorio.png"  style="width:228px;height:228px;background-color:transparent;"/>
+		    <h4><i class="fa fa-stethoscope fa-5x" aria-hidden="true"></i></h4>
 			<div class="card-block">
-			<h4 style="color:#607D8B">Laboratorios:</h4>
+			    <h4>Laboratorios</h4>
 			</div>
 		</div>
 		{{if labs:}}
 
 		{{for lab in labs:}}
-		<div class="breadcrumb"  style="background-color:#E0F2F1">
-			<a = href="{{=URL('solicitud','view_g',vars=dict(lab=lab.id))}}">
-			<h5>{{=lab.f_nombre}}</h5></a>
-		</div>
-		{{pass}}
-		<br>
-		{{pass}}
-		</div>
-
-    <div class="col-sm-4 text-center">
-		<div class="breadcrumb" style="background-color:#E0F2F1">
-			<img  class="img-thumbnail img-fluid" src="/SIGULAB/static/images/seccion.ico" style="width:228px;height:228px;background-color:transparent;"/>
-			<div class="card-block">
-			<h4 style="color:#607D8B">Secciones:</h4>
-			</div>
-		</div>
-		{{if secciones:}}
-		{{for seccion in secciones:}}
-		<div class="breadcrumb"  style="background-color:#E0F2F1">
-			<a  href="{{=URL('solicitud','view_f',vars=dict(secc=seccion.id))}}">
-			<h5>{{=str(db(db.t_laboratorio.id == seccion.f_laboratorio).select(db.t_laboratorio.f_nombre))[22:-2]}}, {{=seccion.f_seccion}}</h5></a>
+		<div class="breadcrumb" style="padding:0px;border:none;">
+		    <a href="{{=URL('solicitud','view_g',vars=dict(lab=lab.id))}}" class="btn btn-lg btn-block" role="button">
+	            <h5>
+		            {{=lab.f_nombre}}
+		        </h5>
+            </a>
 		</div>
 		{{pass}}
 		<br>
@@ -51,24 +36,48 @@
 
     <div class="col-sm-4 text-center">
 		<div class="breadcrumb" style="background-color:#E0F2F1">
-			<img class="img-thumbnail img-fluid" src="/SIGULAB/static/images/espacio.png"  style="width:228px;height:228px;background-color:transparent;"/>
+			<h4><i class="fa fa-sliders fa-5x" aria-hidden="true"></i></h4>
 			<div class="card-block">
-			<h4 style="color:#607D8B">Esp. Fisicos:</h4>
+			    <h4>Secciones</h4>
+			</div>
+		</div>
+		{{if secciones:}}
+		{{for seccion in secciones:}}
+		<div class="breadcrumb" style="padding:0px;border:none;">
+		    <a href="{{=URL('solicitud','view_f',vars=dict(secc=seccion.id))}}" class="btn btn-lg btn-block" role="button">
+	            <h5>
+		            {{=str(db(db.t_laboratorio.id == seccion.f_laboratorio).select(db.t_laboratorio.f_nombre))[22:-2]}}, {{=seccion.f_seccion}}
+		        </h5>
+            </a>
+		</div>
+		{{pass}}
+		<br>
+		{{pass}}
+    </div>
+
+    <div class="col-sm-4 text-center">
+		<div class="breadcrumb" style="background-color:#E0F2F1">
+			<h4><i class="fa fa-industry fa-5x" aria-hidden="true"></i></h4>
+			<div class="card-block">
+			    <h4>Espacios Fisicos</h4>
 			</div>
 		</div>
 		{{if espacios:}}
 
 		{{for espacio in espacios:}}
-		<div class="breadcrumb"  style="background-color:#E0F2F1">
-			<a href="{{=URL('solicitud','view_a', vars=dict(esp=espacio.id))}}">
-			<h5>Seccion: {{=str(db(db.t_seccion.id == espacio.f_seccion).select(db.t_seccion.f_seccion))[19:-2]}}, {{=espacio.f_espacio}}</h5></a>
+		<div class="breadcrumb" style="padding:0px;border:none;">
+		    <a href="{{=URL('solicitud','view_a', vars=dict(esp=espacio.id))}}" class="btn btn-lg btn-block" role="button">
+	            <h5>
+		            Seccion: {{=str(db(db.t_seccion.id == espacio.f_seccion).select(db.t_seccion.f_seccion))[19:-2]}}, {{=espacio.f_espacio}}
+		        </h5>
+            </a>
 		</div>
 		{{pass}}
 
 
 		{{pass}}
-  </div>
-
+    </div>
+</div>
 
 {{else:}}
 
@@ -76,3 +85,4 @@
 <br>
 <br>
 </div>
+
