--- a/views/solicitud/view_r.html
+++ b/views/solicitud/view_r.html
@@ -1,2 +1,31 @@
 {{extend 'layout.html'}}
-<h1>Gestion solicitudes recibidas</h1><p>{{=table}}</p>
+<div class="container">
+	<ol class="breadcrumb" style="background-color:#E0F2F1">
+	  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
+	  <li class="breadcrumb-item"><a href="{{=URL('solicitud','view_o')}}">Deudas</a></li>
+	  <li class="breadcrumb-item active">Espacios Físicos</li>
+	</ol>
+
+{{if labs:}}
+<h3 style="color:#455A64">{{=labs}}</h3>
+{{pass}}
+
+{{if seccion:}}
+<h3 style="color:#455A64">Seccion: {{=seccion}}</h3>
+{{pass}}
+
+{{if espFisico:}}
+<h2>Espacio Fisico: {{=espFisico}}</h2>
+{{pass}}
+
+<h2>Material por devolver</h2>
+<p>{{=table}}</p>
+<a  href="{{=URL('solicitud','view_o')}}">
+<button class="btn btn-default">Atras</button>
+</a>
+<script>
+	$('.row_buttons').each(function(){
+		x = $(this).find('a');
+		x.find('span').first().hide();
+	});
+</script>
