--- a/views/solicitud/view_s.html
+++ b/views/solicitud/view_s.html
@@ -1,2 +1,24 @@
 {{extend 'layout.html'}}
-<h1>Gestion solicitudes recibidas</h1><p>{{=table}}</p>
+<div class="container">
+	<ol class="breadcrumb" style="background-color:#E0F2F1">
+	  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
+	  <li class="breadcrumb-item"><a href="{{=URL('solicitud','view_o')}}">Deudas</a></li>
+	  <li class="breadcrumb-item active">Espacios Físicos</li>
+	</ol>
+
+{{if sust:}}
+<h3 style="color:#455A64">Sustancia prestada: {{=sust}}</h3>
+{{pass}}
+{{if cantidad_total:}}
+<h3 style="color:#455A64">Cantidad prestada: {{=cantidad_total}}</h3>
+{{pass}}
+<!--
+{{if cantidad_recolectada:}}
+<h3 style="color:#455A64">Cantidad devuelta: {{=cantidad_recolectada}}</h3>
+{{pass}}
+-->
+<p>{{=table}}</p>
+
+<a  href="{{=URL('solicitud','view_r', vars=dict(esp=request.vars['esp']))}}">
+<button class="btn btn-default">Atras</button>
+</a>
