--- a/views/solicitud/view_t.html
+++ b/views/solicitud/view_t.html
@@ -1,2 +1,37 @@
 {{extend 'layout.html'}}
-<h1>Gestion solicitudes recibidas</h1><p>{{=table}}</p>
+<div class="container">
+	<ol class="breadcrumb" style="background-color:#E0F2F1">
+	  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
+	  <li class="breadcrumb-item"><a href="{{=URL('solicitud','view_k')}}">Préstamo</a></li>
+	  <li class="breadcrumb-item active">Espacio Físico</li>
+	</ol>
+{{if sust:}}
+<h3 style="color:#455A64">Sustancia prestada: {{=sust}}</h3>
+{{pass}}
+{{if cantidad_total:}}
+<h3 style="color:#455A64">Cantidad prestada: {{=cantidad_total}}</h3>
+{{pass}}
+{{if cantidad_recolectada:}}
+<h3 style="color:#455A64">Cantidad devuelta: {{=cantidad_recolectada}}</h3>
+{{pass}}
+<p>{{=table}}</p>
+
+
+<a  href="{{=URL('solicitud','view_n', vars=dict(esp=request.vars['esp']))}}">
+<button class="btn btn-default">Atras</button>
+</a>
+
+<script>
+	js = {{=aux}};
+	i = 0;
+	$('.row_buttons').each(function(){
+		x = $(this).find('a');
+		x.find('span').first().hide();
+		y = x.first();
+		if (js[i]==1){
+			y.hide();
+			x.hide();
+		}
+		i +=1;
+	});
+</script>
