--- a/views/sustancias/view_bitacora.html
+++ b/views/sustancias/view_bitacora.html
@@ -6,6 +6,9 @@
 <h3>Unidades: {{=unid}}</h3>
 {{pass}}
 <p>{{=table}}</p>
+{{if 'new' in request.args:}}
+<p class="help-block center">Los campos marcados con (*) son obligatorios</p>
+{{pass}}
 <p>Cantidad Disponible: {{=total}}</p>
 <a  href="{{=URL('sustancias','inventario_manage',vars=dict(esp=request.vars['esp']))}}">
 <button class="btn btn-default">Atras</button>
