--- a/views/layout.html
+++ b/views/layout.html
@@ -64,7 +64,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">SIGULAB</a>
+          <a class="navbar-brand" href="{{=URL('front_page','index')}}">SIGULAB</a>
           {{=response.logo or ''}}
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
