--- a/views/sustancias/view_bitacora.html
+++ b/views/sustancias/view_bitacora.html
@@ -1,18 +1,29 @@
 {{extend 'layout.html'}}
+
 <h1>Bitacora</h1>
+
 <h2>Sustancia: {{=name}}</h2>
+
 <h2>Espacio Fisico: {{=espacio}}</h2>
+
 {{if not 'new' in request.args:}}
 <h3>Unidades: {{=unid}}</h3>
 {{pass}}
+
 <p>{{=table}}</p>
-{{if 'new' in request.args:}}
+
+{{if 'new' in request.args or 'edit' in request.args:}}
 <p class="help-block center">Los campos marcados con (*) son obligatorios</p>
 {{pass}}
-<p>Cantidad Disponible: {{=total}}</p>
+
+<p class="center">Cantidad Disponible: {{=total}}</p>
+
+{{if not('edit' in request.args or 'new' in request.args):}}
 <a  href="{{=URL('sustancias','inventario_manage',vars=dict(esp=request.vars['esp']))}}">
 <button class="btn btn-default">Atras</button>
 </a>
+{{pass}}
+
 <script>
 jQuery('#t_bitacora_f_proceso').change(function(){
     if (jQuery('#t_bitacora_f_proceso :selected').text() == "Compra") jQuery('#t_bitacora_f_descripcion__row').slideUp();
