--- a/views/layout.html
+++ b/views/layout.html
@@ -45,11 +45,7 @@
     middle_column = {0: mc0, 1: mc1, 2: mc2}[
     (left_sidebar_enabled and 1 or 0)+(right_sidebar_enabled and 1 or 0)]
     }}
-    <style type="text/css">
-    body{
-    background-image:url("{{=URL('static','images/logo-usb.png')}}"));
-    }
-  </style>
+
   </head>
   <body>
     <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
@@ -118,15 +114,41 @@
               &nbsp;&nbsp;Universidad Simón Bolívar
           </div>
       </div>-->
-<table align="center" class="footer2" border="0" cellpadding="1" cellspacing="1"><tbody><tr><td valign="bottom" width="95">
-        <a href="http://www.usb.ve"><img width="70" height="45"alt="" src="{{=URL('static','images/usb.png')}}"></a></td>
-<td valign="bottom">
-        <a href="http://www.usb.ve/home/node/68">e-virtual</a> | <a href="https://webmail.usb.ve/" target="_blank">Correo</a> |<a href="http://www.usb.ve/buscador.php" target="_blank"> </a><a href="https://esopo.usb.ve">esopo</a> |<a href="http://www.usb.ve/buscador.php" target="_blank"> </a><a href="http://www.youtube.com/canalusb" target="_blank">canalUSB</a> | <a href="http://www.usb.ve/agenda.php" target="_blank">Agenda Cultural</a> | <a href="http://usbnoticias.info/" target="_blank">USBnoticias</a> |<span> </span><span> </span><a href="http://www.usb.ve/home/node/55">Calendario</a> |<br>
-        Sede Sartenejas, Baruta, Edo. Miranda - Apartado 89000 - Cable Unibolivar - Caracas Venezuela. Teléfono +58 0212-9063111<br>
-        Sede Litoral, Camurí Grande, Edo. Vargas Parroquia Naiguatá. Teléfono +58 0212-9069000<br>
-        Diseñada y desarrollada por Lambda (Sistemas de Información I) <a href="mailto:ulab-smdp@usb.ve">ulab-smdp@usb.ve</a></td>
-</tr></tbody></table>
-    </footer>
+      <footer>
+        <table align="center" class="footer2" border="0" cellpadding="1" cellspacing="1">
+          <tbody>
+            <tr>
+
+              <td valign="bottom" width="95">
+                <a href="http://www.usb.ve"><img width="70" height="45"alt="" src="{{=URL('static','images/usb.png')}}"></a>
+              </td>
+
+              <td valign="bottom">
+                <a href="http://www.usb.ve/home/node/68">e-virtual</a> |
+                <a href="https://webmail.usb.ve/" target="_blank">Correo</a> |
+                <a href="http://www.usb.ve/buscador.php" target="_blank"></a>
+                <a href="https://esopo.usb.ve">esopo</a> |
+                <a href="http://www.usb.ve/buscador.php" target="_blank"></a>
+                <a href="http://www.youtube.com/canalusb" target="_blank">canalUSB</a> |
+                <a href="http://www.usb.ve/agenda.php" target="_blank">Agenda Cultural</a> |
+                <a href="http://usbnoticias.info/" target="_blank">USBnoticias</a> |
+                <span> </span>
+                <span> </span>
+                <a href="http://www.usb.ve/home/node/55">Calendario</a> |
+                <br>
+                Sede Sartenejas, Baruta, Edo. Miranda - Apartado 89000 - Cable Unibolivar - Caracas Venezuela. Teléfono +58 0212-9063111
+                <br>
+                Sede Litoral, Camurí Grande, Edo. Vargas Parroquia Naiguatá. Teléfono +58 0212-9069000
+                <br>
+                Diseñada y desarrollada por Lambda (Sistemas de Información I)
+                <a href="mailto:ulab-smdp@usb.ve">ulab-smdp@usb.ve</a>
+              </td>
+
+            </tr>
+
+          </tbody>
+        </table>
+      </footer>
     {{end}}
     <!-- The javascript =============================== -->
     <script src="{{=URL('static','js/bootstrap.min.js')}}"></script>
