--- a/views/default/user.html
+++ b/views/default/user.html
@@ -9,16 +9,23 @@
 <h2>
 {{
 =T('Sign Up')
-if request.args(0) == 'register' 
-else T('Log In') 
-    if request.args(0) == 'login' 
-    else T(request.args(0).replace('_',' ').title())   
+if request.args(0) == 'register'
+else T('')
+    if request.args(0) == 'login'
+    else T(request.args(0).replace('_',' ').title())
 }}
 </h2>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-        <div id="web2py_user_form" class="col-lg-6">
+
+      <div class="col-lg-7">
+        <div class="container-fluid">
+          <img class="img img-responsive"src="{{=URL('static','images/login_copy__.png')}}" alt="Beakers">
+        </div>
+      </div>
+
+        <div id="web2py_user_form" class="col-lg-5">
         {{
         if request.args(0) == 'login':
             if not 'register' in auth.settings.actions_disabled:
@@ -37,6 +44,10 @@ else T('Log In')
 
 {{block page_js}}
 <script>
+    jQuery('#auth_user_email__label').attr('class','control-label col-sm-12 center');
+    jQuery('#auth_user_password__label').attr('class','control-label col-sm-12 center');
+    jQuery('div[class=col-sm-9]').attr('class','control-label col-sm-12 center');
+    jQuery('div.col-sm-9.col-sm-offset-3').attr('class','col-sm-12 center');
     jQuery('input[type=submit]').addClass('button btn-lg btn-block');
     jQuery('.checkbox').css("text-align","center");
     jQuery("#web2py_user_form input:visible:enabled:first").focus();
