--- a/views/solicitud/view_o.html
+++ b/views/solicitud/view_o.html
@@ -3,10 +3,10 @@
 <div class="container">
 	<ol class="breadcrumb" style="background-color:#E0F2F1">
 	  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
-	  <li class="breadcrumb-item active">Deudas</li>
+	  <li class="breadcrumb-item"><a href="{{=URL('front_page','sustancias')}}">Sustancias</a></li>
+	  <li class="breadcrumb-item active">Inventario</li>
 	</ol>
 
- <h1 align="center" style="color:#455A64"> DEUDAS</h1>
 
 <p>{{str(auth.has_membership('Técnico'))}}</p>
 {{if espacios:}}
