--- a/views/gestion/secciones.html
+++ b/views/gestion/secciones.html
@@ -9,4 +9,8 @@
 <h2>Gestión de Secciones</h2>
 <p>Desde aquí se pueden editar los diferentes secciones y sus jefes.</p>
 <p>{{=form}}</p>
+
+{{if 'new' in request.args or 'edit' in request.args:}}
+<p class="help-block center">Los campos marcados con (*) son obligatorios</p>
+{{pass}}
 </div>
