--- a/views/gestion/autorizados.html
+++ b/views/gestion/autorizados.html
@@ -9,4 +9,8 @@
 <h2>Gestión de Usuarios Autorizados</h2>
 <p>Desde aquí se pueden consultar, editar y eliminar los usuarios que están autorizados para registrarse en el sistema.</p>
 <p>{{=form}}</p>
+
+{{if 'new' in request.args or 'edit' in request.args:}}
+<p class="help-block center">Los campos marcados con (*) son obligatorios</p>
+{{pass}}
 </div>
