--- a/views/gestion/laboratorios.html
+++ b/views/gestion/laboratorios.html
@@ -9,4 +9,9 @@
 <h2>Gestión de Laboratorios</h2>
 <p>Desde aquí se pueden editar los diferentes laboratorios y sus jefes.</p>
 <p>{{=form}}</p>
+
+{{if 'new' in request.args or 'edit' in request.args:}}
+<p class="help-block center">Los campos marcados con (*) son obligatorios</p>
+{{pass}}
 </div>
+
