--- a/views/gestion/privilegios.html
+++ b/views/gestion/privilegios.html
@@ -9,4 +9,8 @@
 <h2>Gestión de Privilegios</h2>
 <p>Desde aquí se pueden consultar los privilegios disponibles en el sistema y quienes están asociados.</p>
 <p>{{=form}}</p>
+
+{{if 'new' in request.args or 'edit' in request.args:}}
+<p class="help-block center">Los campos marcados con (*) son obligatorios</p>
+{{pass}}
 </div>
