--- a/views/sustancias/inventario_lab.html
+++ b/views/sustancias/inventario_lab.html
@@ -1,5 +1,5 @@
 {{extend 'layout.html'}}
-<div class="container style="background-color:#E0F2F1">
+<div class="container">
 	<ol class="breadcrumb">
 	  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
 	  <li class="breadcrumb-item"><a href="{{=URL('front_page','sustancias')}}">Sustancias</a></li>
