--- a/views/front_page/index.html
+++ b/views/front_page/index.html
@@ -1,9 +1,9 @@
 {{extend 'layout.html'}}
 <div class="container">
-    <ol class="breadcrumb" style="background-color:#E0F2F1">
+    <ol class="breadcrumb">
       <li class="breadcrumb-item active">Home</li>
     </ol>
-    <h1 align="center" style="color:#455A64">SIGULAB</h1>
+    <br>
     <br>
     <div class="row">
 
