--- a/views/front_page/sustancias.html
+++ b/views/front_page/sustancias.html
@@ -6,7 +6,7 @@
   or auth.has_membership('Técnico')\
   or auth.has_membership('Gestor de Sustancias'):}}
 <div class="container">
-    <ol class="breadcrumb" style="background-color:#E0F2F1">
+    <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
       <li class="breadcrumb-item active">Sustancias</li>
     </ol>
