--- a/views/layout.html
+++ b/views/layout.html
@@ -24,8 +24,9 @@
     <link rel="stylesheet" href="{{=URL('static','css/font-awesome.min.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/bootstrap.min.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/web2py-bootstrap3.css')}}"/>
-    <link rel="shortcut icon" href="{{=URL('static','images/favicon.ico')}}" type="image/x-icon">
-    <link rel="apple-touch-icon" href="{{=URL('static','images/favicon.png')}}">
+    <link rel="shortcut icon" href="{{=URL('static','images/logo-ulab.png')}}" type="image/x-icon">
+    <link rel="apple-touch-icon" href="{{=URL('static','images/logo-ulab.png')}}">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway|Source+Sans+Pro" rel="stylesheet">
     <!-- All JavaScript at the bottom, except for Modernizr which enables
          HTML5 elements & feature detects -->
     <script src="{{=URL('static','js/modernizr-2.8.3.min.js')}}"></script>
@@ -60,12 +61,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{=URL('front_page','index')}}">SIGULAB</a>
           {{=response.logo or ''}}
+          <a class="navbar-brand" href="{{=URL('front_page','index')}}" style="color:#455A64;font-size:200%;">SIGULAB</a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
+            {{if request.args(0) != 'login':}}
             {{='auth' in globals() and auth.navbar('Welcome',mode='dropdown') or ''}}
+            {{pass}}
           </ul>
           {{if response.menu:}}
           {{=MENU(response.menu, _class='nav navbar-nav',li_class='dropdown',ul_class='dropdown-menu')}}
