--- a/views/solicitud/select_solicitud.html
+++ b/views/solicitud/select_solicitud.html
@@ -1,7 +1,7 @@
 {{extend 'layout.html'}}
 
 <div class="container">
-	<ol class="breadcrumb" style="background-color:#E0F2F1">
+	<ol class="breadcrumb">
 	  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
 	  <li class="breadcrumb-item active">Solicitud</li>
 	</ol>
@@ -21,7 +21,7 @@
   <br>
 
     <div class="col-sm-4 text-center">
-		<div class="breadcrumb" style="background-color:#E0F2F1">
+		<div class="breadcrumb">
 			<h4><i class="fa fa-industry fa-5x" aria-hidden="true"></i></h4>
 			<div class="card-block">
 			    <h4>Espacios Fisicos</h4>
@@ -50,4 +50,3 @@
 <br>
 <br>
 </div>
-
