--- a/views/solicitud/tipo_solicitud.html
+++ b/views/solicitud/tipo_solicitud.html
@@ -1,6 +1,6 @@
 {{extend 'layout.html'}}
 <div class="container">
-	<ol class="breadcrumb" style="background-color:#E0F2F1">
+	<ol class="breadcrumb">
 	  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
 	  <li class="breadcrumb-item"><a href="{{=URL('solicitud','select_solicitud')}}">Solicitud</a></li>
 	  <li class="breadcrumb-item active">Espacios Físicos</li>
@@ -39,10 +39,10 @@ if (a==1){
 	i = 0;
 	$('.row_buttons').each(function(){
 		x = $(this).find('a');
-		x.find('span').first().hide();
+		x.find('span').first().css('visibility','hidden');
 		y = x.first();
 		if (js[i]==1){
-			y.hide();
+			y.css('visibility','hidden');
 		}
 		i +=1;
 	});
