--- a/views/solicitud/view_k.html
+++ b/views/solicitud/view_k.html
@@ -1,7 +1,7 @@
 {{extend 'layout.html'}}
 
 <div class="container">
-	<ol class="breadcrumb" style="background-color:#E0F2F1">
+	<ol class="breadcrumb">
 	  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
 	  <li class="breadcrumb-item active">Préstamos</li>
 	</ol>
@@ -83,4 +83,3 @@
 <br>
 <br>
 </div>
-
