--- a/views/solicitud/view_n.html
+++ b/views/solicitud/view_n.html
@@ -1,6 +1,6 @@
 {{extend 'layout.html'}}
 <div class="container">
-	<ol class="breadcrumb" style="background-color:#E0F2F1">
+	<ol class="breadcrumb">
 	  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
 	  <li class="breadcrumb-item"><a href="{{=URL('solicitud','view_k')}}">Préstamo</a></li>
 	  <li class="breadcrumb-item active">Espacio Físico</li>
