--- a/views/solicitud/view_o.html
+++ b/views/solicitud/view_o.html
@@ -1,7 +1,7 @@
 {{extend 'layout.html'}}
 
 <div class="container">
-	<ol class="breadcrumb" style="background-color:#E0F2F1">
+	<ol class="breadcrumb">
 	  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
 	  <li class="breadcrumb-item"><a href="{{=URL('front_page','sustancias')}}">Sustancias</a></li>
 	  <li class="breadcrumb-item active">Inventario</li>
@@ -85,4 +85,3 @@
 <br>
 <br>
 </div>
-
