--- a/views/sustancias/select_inventario.html
+++ b/views/sustancias/select_inventario.html
@@ -1,7 +1,7 @@
 {{extend 'layout.html'}}
 
 <div class="container">
-    <ol class="breadcrumb" style="background-color:#E0F2F1">
+    <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
         <li class="breadcrumb-item"><a href="{{=URL('front_page','sustancias')}}">Sustancias</a></li>
         <li class="breadcrumb-item active">Inventario</li>
@@ -11,7 +11,7 @@
   <br>
   <div class="row">
     <div class="col-sm-4 text-center">
-		<div class="breadcrumb" style="background-color:#E0F2F1">
+		<div class="breadcrumb" style="background-color:transparent;">
 		    <h4><i class="fa fa-stethoscope fa-5x" aria-hidden="true"></i></h4>
 			<div class="card-block">
 			    <h4>Laboratorios</h4>
@@ -33,8 +33,8 @@
     </div>
 
     <div class="col-sm-4 text-center">
-		<div class="breadcrumb" style="background-color:#E0F2F1">
-			<h4><i class="fa fa-sliders fa-5x" aria-hidden="true"></i></h4>
+		<div class="breadcrumb" style="background-color:transparent">
+			<h4><i class="fa fa-flask fa-5x" aria-hidden="true"></i></h4>
 			<div class="card-block">
 			    <h4>Secciones</h4>
 			</div>
@@ -54,8 +54,8 @@
     </div>
 
     <div class="col-sm-4 text-center">
-		<div class="breadcrumb" style="background-color:#E0F2F1">
-			<h4><i class="fa fa-industry fa-5x" aria-hidden="true"></i></h4>
+		<div class="breadcrumb" style="background-color:transparent">
+			<h4><i class="fa fa-building fa-5x" aria-hidden="true"></i></h4>
 			<div class="card-block">
 			    <h4>Espacios Fisicos</h4>
 			</div>
