--- a/views/sustancias/sustanciapeligrosa_manage.html
+++ b/views/sustancias/sustanciapeligrosa_manage.html
@@ -2,7 +2,7 @@
 <div class="container">
 
 	<div>
-		<ol class="breadcrumb" style="background-color:#E0F2F1">
+		<ol class="breadcrumb">
 		  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
 		  <li class="breadcrumb-item"><a href="{{=URL('front_page','sustancias')}}">Sustancias</a></li>
 		  <li class="breadcrumb-item active">Listado de sustancias</li>
