--- a/static/css/web2py-bootstrap3.css
+++ b/static/css/web2py-bootstrap3.css
@@ -261,6 +261,7 @@ div.error_wrapper {
     padding: 6px 12px;
 }
 .web2py_counter {
+    visibility: hidden;
     margin-top: 5px;
     margin-right: 2px;
     width: 35%;
